--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,20 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <!-- +++Добавил руками		-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mustache</artifactId>
+        </dependency>
+        <!-- -Добавил руками		-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
