--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5436/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 
+
+
+
+spring.jpa.show-sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
