--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5436/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:h2:mem:votes
+spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.jpa.defer-datasource-initialization=true
+
+
+#spring.jackson.serialization.fail-on-empty-beans=false
+spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
-spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.hibernate.ddl-auto=create
