--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+#Application constants
+restaurant-votes.stop-hour=11
